updated compose details

--- a/config/peer2/peer2.conf
+++ b/config/peer2/peer2.conf
@@ -1,11 +1,11 @@
 [Interface]
 Address = 10.13.13.3
-PrivateKey = QNqnPi8QroFkn6lPtIBdX0ND/SoIo2ynGdjlFgQESWc=
+PrivateKey = 8IgO8zx79U4M22x8lns1NbUxj9ub3xMOYqSaQ1FMHWY=
 ListenPort = 51820
 DNS = 10.13.13.1
 
 [Peer]
 PublicKey = tR5+Nk8SCPhTlzcq4pp4Ui0tau3/d761pAIWKGUaCzI=
-PresharedKey = QCrTPdaZYja+SNKuc0q4mCvnddvdAJDO7xbONGCGp6s=
-Endpoint = ubuntuvm.home:443
+PresharedKey = bnWznapipcwyy/EqvgUbCNdezHozHuDqzT6NTTMmLyE=
+Endpoint = wgfluxvpn.app.runonflux.io:443
 AllowedIPs = 0.0.0.0/0
